--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
+    "@types/drift-zoom": "^1.5.0",
     "@types/react": "^18.0.21",
+    "@types/tiny-slider-react": "^0.3.4",
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "emitty": "^1.4.0",
